[workspace]
members = [
    "druid",
    "druid-shell",
    "druid-derive",
]

[patch.crates-io]
# My fork of Piet that has Piet-Android
# piet-common = {git = "https://github.com/marcopolo/piet"}
piet-common = {path = "../piet/piet-common"}
# Local fork that lets us turn Local and Argument int Global
# jni-glue = {git = "https://github.com/marcopolo/jni-bindgen", branch = "jni-glue-only"}
jni-glue = {path = "../jni-bindgen/jni-glue"}